client/assets/less/core/general.less
html {
  overflow-x: hidden;
}

main {
  position: relative;
  top: @header-height-xs;
  min-height: @content-area-height-xs;

  @media @md-and-up {
    top: @header-height-md;
    height: @content-area-height-md;
    min-height: 0;
    max-height: @content-area-height-md;
  }

  .main-layer {
    position: absolute;
    min-height: 100%;
    overflow: hidden;
    z-index: 3;

    @media @md-and-up {
      width: auto;
    }
  }
}

